After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768546 - Wrong documentation for the "move-viewport" signal of GtkTextView
Wrong documentation for the "move-viewport" signal of GtkTextView
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
3.21.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-07-08 02:53 UTC by relent95
Modified: 2016-07-08 14:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description relent95 2016-07-08 02:53:17 UTC
The type of the parameter "step" of the "move-viewport" is GtkScrollStep, but the description of the parameter says it's a GtkMovementStep.
Also, it says "the granularity of the move", but IMHO it will be more clear if it says "the granularity of the scroll".