Fix up the documentation of GtkTextView::move-viewport

Pointed out in https://bugzilla.gnome.org/show_bug.cgi?id=768546